🐛 design bugs, safari z-index bug

--- a/styles/_home.css
+++ b/styles/_home.css
@@ -186,4 +186,8 @@
 	.hm-features-list {
 		column-gap: 0;
 	}
+
+	.hm-features h2 {
+		padding: 0 2rem;
+	}
 }
